Adds some meta data to the index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Information About Me -->
+    <meta name="title" content="Darlington Gospel Portfolio">
+    <meta name="description" content="Take a look at my portfolio here in my site.">
+    <meta name="keywords" content="Portfolio, Resume, Experiences">
     
     <!-- FAV AND ICONS   -->
     <link rel="shortcut icon" href="assets/images/favicon.ico">
