Added the dynamic project update to the portfolio

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#mh-experience">Experiences</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#mh-portfolio">Portfolio</a>
+                </li>
                 <!-- <li class="nav-item">
-                                <a class="nav-link" href="#mh-portfolio">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#mh-blog">Blog</a>
-                            </li> -->
+                    <a class="nav-link" href="#mh-blog">Blog</a>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="#mh-contact">Contact</a>
                 </li>
@@ -593,129 +593,134 @@
        PORTFOLIO
     ===================
     -->
-    <!-- <section class="mh-portfolio" id="mh-portfolio">
-        <div class="container">
-            <div class="row section-separator">
-                <div class="section-title col-sm-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">
-                    <h3>Recent Portfolio</h3>
-                </div>
-                <div class="part col-sm-12">
-                    <div class="portfolio-nav col-sm-12" id="filter-button">
-                        <ul>
-                            <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                            <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
-                            <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Branding</span></li>
-                            <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
-                            <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
-                        </ul>
-                    </div>
-                    <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                        <div class="portfolioContainer row">
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                <figure>
-                                    <img src="assets/images/portfolio/g1.jpg" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup">
-                                <figure>
-                                    <img src="assets/images/portfolio/g2.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                <figure>
-                                    <img src="assets/images/portfolio/g3.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                <figure>
-                                    <img src="assets/images/portfolio/g5.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g5.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
-                                <figure>
-                                    <img src="assets/images/portfolio/g4.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g4.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                <figure>
-                                    <img src="assets/images/portfolio/g6.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g6.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                <figure>
-                                    <img src="assets/images/portfolio/g8.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g8.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
-                                <figure>
-                                    <img src="assets/images/portfolio/g9.png" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g9.png" data-fancybox data-src="#mh"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                            <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                <figure>
-                                    <img src="assets/images/portfolio/g7.jpg" alt="img04">
-                                    <figcaption class="fig-caption">
-                                        <i class="fa fa-search"></i>
-                                        <h5 class="title">Creative Design</h5>
-                                        <span class="sub-title">Photograpy</span>
-                                        <a href="assets/images/portfolio/g7.jpg" data-fancybox="gallery"></a>
-                                    </figcaption>
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <section class="mh-portfolio" id="mh-portfolio">
+      <div class="container">
+        <div class="row section-separator">
+          <div
+            class="section-title col-sm-12 wow fadeInUp"
+            data-wow-duration="0.8s"
+            data-wow-delay="0.1s"
+          >
+            <h3>Recent Portfolio</h3>
+          </div>
+          <div class="part col-sm-12">
+            <div class="portfolio-nav col-sm-12" id="filter-button">
+              <ul>
+                <li
+                  data-filter="*"
+                  class="current wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.1s"
+                >
+                  <span>All Categories</span>
+                </li>
+                <li
+                  data-filter=".web"
+                  class="wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.2s"
+                >
+                  <span>Web Dev</span>
+                </li>
+                <li
+                  data-filter=".mobile"
+                  class="wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.3s"
+                >
+                  <span>Mobile Dev</span>
+                </li>
+                <li
+                  data-filter=".graphics"
+                  class="wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.4s"
+                >
+                  <span>Graphics</span>
+                </li>
+                <li
+                  data-filter=".ml"
+                  class="wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.5s"
+                >
+                  <span>ML Dev</span>
+                </li>
+                <li
+                  data-filter=".writing"
+                  class="wow fadeInUp"
+                  data-wow-duration="0.8s"
+                  data-wow-delay="0.5s"
+                >
+                  <span>Technical Writing</span>
+                </li>
+              </ul>
             </div>
+            <div
+              class="mh-project-gallery col-sm-12 wow fadeInUp"
+              id="project-gallery"
+              data-wow-duration="0.8s"
+              data-wow-delay="0.5s"
+            >
+              <div class="portfolioContainer row" id="projectsApp">
+                <div
+                  v-for="project in projects"
+                  :key="project.name"
+                  :class="['grid-item', 'col-md-4', 'col-sm-6', 'col-xs-12', project.fields.type.stringValue]"
+                >
+                  <figure @click="setProject(project.fields)">
+                    <img
+                      :src="project.fields.imgurl.stringValue"
+                      :alt="project.fields.title.stringValue"
+                    />
+                    <figcaption class="fig-caption">
+                      <i class="fa fa-search"></i>
+                      <h5 class="title">
+                        {{project.fields.title.stringValue}}
+                      </h5>
+                      <span class="sub-title"
+                        >{{project.fields.views.integerValue}} Views</span
+                      >
+                      <a data-fancybox data-src="#mh"></a>
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </section> -->
+      </div>
+      <div
+        class="mh-portfolio-modal modal"
+        tabindex="-1"
+        ref="modal"
+        role="dialog"
+        id="mh"
+      >
+        <div class="container">
+          <div class="row mh-portfolio-modal-inner">
+            <div class="col-sm-5">
+              <h2 id="projectTitle"></h2>
+              <p id="projectDesc"></p>
+              <div class="mh-about-tag">
+                <ul id="projectStacks"></ul>
+              </div>
+              <a id="projectDemo" hid="#" class="btn btn-fill">Live Demo</a>
+            </div>
+            <div class="col-sm-7">
+              <div class="mh-portfolio-modal-img">
+                <img id="projectImgurl" src="" alt="" class="img-fluid" />
+                <p>
+                  <a id="projectRepo" class="text-primary" href="#"
+                    >Repository Link</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--
     ===================
@@ -923,7 +928,7 @@
                   ></iframe>
                 </div>
               </div>
-            </div>           
+            </div>
             <div
               class="col-sm-12 mh-copyright wow fadeInUp"
               data-wow-duration="0.8s"
@@ -934,7 +939,8 @@
                   <div class="text-left text-xs-center">
                     <p>
                       <a href="templateshub.net"
-                        >With Love ❤️ &copy; 2016 - <span id="year"></span></a>
+                        >With Love ❤️ &copy; 2016 - <span id="year"></span
+                      ></a>
                     </p>
                   </div>
                 </div>
@@ -1008,22 +1014,48 @@
     <script src="assets/plugins/js/packery-mode.pkgd.js"></script>
     <script src="assets/js/custom-scripts.js"></script>
 
-    <!-- <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js'
-
-      const firebaseConfig = {
-        apiKey: 'AIzaSyAKuTk75jm060EkmkreMhO8I6q4Qz4Xke8',
-        authDomain: 'portfolio-56269.firebaseapp.com',
-        projectId: 'portfolio-56269',
-        storageBucket: 'portfolio-56269.appspot.com',
-        messagingSenderId: '298105790192',
-        appId: '1:298105790192:web:bf252266e85083980aec35',
-        measurementId: 'G-65W5KFL2T2',
-      }
-
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig)
-    </script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"
+      integrity="sha512-lTLt+W7MrmDfKam+r3D2LURu0F47a3QaW5nF0c6Hl0JDZ57ruei+ovbg7BrZ+0bjVJ5YgzsAWE+RreERbpPE1g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x"></script>
+    <script>
+      const app = new Vue({
+        el: '#projectsApp',
+        data: {
+          title: 'Hello World',
+          URL: 'https://firestore.googleapis.com/v1/',
+          projects: [],
+          project: {},
+        },
+        mounted() {
+          this.getProjects()
+        },
+        methods: {
+          getProjects() {
+            fetch(
+              `${this.URL}projects/portfolio-56269/databases/(default)/documents/projects`
+            )
+              .then((res) => res.json())
+              .then((data) => (this.projects = data.documents))
+          },
+          setProject(project) {
+            $('#projectTitle').text(project.title.stringValue)
+            $('#projectDesc').text(project.description.stringValue)
+            $('#projectRepo').attr('href', project.repo.stringValue)
+            $('#projectDemo').attr('href', project.demo.stringValue)
+            $('#projectImgurl').attr('src', project.imgurl.stringValue)
+            $('#projectImgurl').attr('alt', project.title.stringValue)
+            $('#projectStacks').empty()
+            const stacks = project.stacks.stringValue.split(',')
+            for (const key in stacks) {
+              $('#projectStacks').append(`<li><span>${stacks[key]}</span></li>`)
+            }
+          },
+        },
+      })
+    </script>
   </body>
 </html>
